# PO-SLAM

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  sept_examples.sh
Examples/Monocular/: SMT4.yaml  mono_smt.cc  mono_tum.cc  moon_test.yaml
Examples/ROS/ORB_SLAM2/: CMakeLists.txt
Examples/Stereo/: EuRoC.yaml  SePT01.yaml  SePT03.yaml  SePT04.yaml  SePT05.yaml  stereo_SePT.cc  stereo_euroc.cc
Examples/Stereo/TimeStamps/: SePT01.txt  SePT02.txt  SePT03.txt  SePT04.txt
dataset/SePT/SePT01/: offline_download.txt
dataset/SePT/SePT01/cam0/: pruned_timestamp.txt
dataset/SePT/SePT01/cam0/data/: data_download.txt
dataset/SePT/SePT01/cam0/object_uf50/: masked.py
dataset/SePT/SePT01/cam1/: data.csv
dataset/SePT/SePT01/imu0/: data.csv
dataset/SePT/SePT01/lidar0/: data.csv
dataset/SePT/SePT01/lidar0/data/: 1691392224680000000.asc  1691392225018989312.asc  1691392225346777856.asc  1691392225463043584.asc  1691392225572539648.asc  1691392225681747200.asc  1691392225790134016.asc  1691392225898586880.asc  1691392226006703104.asc  1691392226115264000.asc  1691392226231726592.asc  1691392226340033792.asc  1691392226448555776.asc  1691392226556893952.asc  1691392226673577728.asc  1691392226781832192.asc  1691392226890182912.asc  1691392226998590464.asc  1691392227106857984.asc  1691392227223546112.asc  1691392227331890176.asc  1691392227440248320.asc  1691392227548646656.asc  1691392227656865792.asc  1691392227773566976.asc  1691392227881932800.asc  1691392227990246144.asc  1691392228098590720.asc  1691392228206828032.asc  1691392228315243776.asc  1691392228423510784.asc  1691392228531887872.asc  1691392228648538624.asc  1691392228756854016.asc  1691392228865211648.asc  1691392228973541888.asc  1691392229090314496.asc  1691392229198566912.asc  1691392229306888192.asc  1691392229415263744.asc  (+794 more)
dataset/SePT/SePT01/state_groundtruth_estimate0/: data.csv  data.txt
eval/python/: associate.py  evaluate_ate_scale.py
evo_output/: evo_cmd.txt  relative_traj.py  rmse_gt.py
evo_output/SePT01/: SePT01_CameraTrajectory.txt  SePT01_ObjectRelativePoses.txt  data_cropped.csv  data_cropped.kitti
include/: Frame.h  FrameDrawer.h  LocalMapping.h  LoopClosing.h  MapPoint.h  System.h  Tracking.h  YOLOv3SE.h
protobuf-redis/: CMakeLists.txt  dump.rdb
protobuf-redis/proto/: offline_bbox.proto
protobuf-redis/src/: publish_test.cc  subscribe_matching.cc  subscribe_semanticMono.cc  subscribe_semanticStereo.cc
results_line_segments/2024-06-11_14:45:41/: info.txt
src/: Frame.cc  Initializer.cc  LoopClosing.cc  MapDrawer.cc  MapPoint.cc  Object.cc  ProbabilityMapping.cc  System.cc  Tracking.cc  Viewer.cc
src/detect_3d_cuboid/: box_proposal_detail.cpp  object_3d_util.cpp
src/line_detect/libs/: lsd.cpp
tools/: bin_vocabulary
